# AITRAISHItuner

./: .gitignore  AGENT_HANDOFF.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  install_silent.bat  install_vst3.bat
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml
assets/presets/factory/: 808_Crunch.json  Default.json  Heavy_Clip.json
cmake/: CompilerOptions.cmake  JuceSetup.cmake  PluginConfig.cmake
docs/: ARCHITECTURE.md  BUILDING.md  DSP.md  PERFORMANCE.md  PLUGIN_FORMATS.md  PRESET_FORMAT.md  UI_CUSTOMIZATION.md
src/DSP/: DistortionEngine.cpp  DistortionEngine.h  Metering.h  OversamplingWrapper.cpp  OversamplingWrapper.h  SampleEngine.cpp  SampleEngine.h  SampleLoader.cpp  SampleLoader.h  ToneFilter.cpp  ToneFilter.h
src/Plugin/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h
src/State/: Serialization.cpp  Serialization.h  StateManager.cpp  StateManager.h
src/UI/: DistortionPanel.cpp  DistortionPanel.h  HeaderBar.cpp  HeaderBar.h  KnobControl.cpp  KnobControl.h  MeterDisplay.cpp  MeterDisplay.h  OutputPanel.cpp  OutputPanel.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h  SamplePanel.cpp  SamplePanel.h  Theme.cpp  Theme.h  TransportBar.cpp  TransportBar.h  WaveformDisplay.cpp  WaveformDisplay.h
src/Utils/: AudioBufferUtils.h  Logging.h  MathUtils.h  Smoothing.h
tests/: CMakeLists.txt  JuceHeader.h
tests/DSP/: test_distortion.cpp  test_metering.cpp  test_pitch_ratio.cpp  test_sample_engine.cpp
tests/Utils/: test_math.cpp
